--- a/app/src/main/res/layout/san_pham_by_type.xml
+++ b/app/src/main/res/layout/san_pham_by_type.xml
@@ -18,6 +18,7 @@
                 android:id="@+id/imgSanPhamByType"
                 android:adjustViewBounds="true"
                 android:layout_margin="2dp"
+                android:src="@mipmap/ic_launcher_round"
                 android:layout_width="100dp"
                 android:layout_height="100dp"/>
             <LinearLayout
