--- a/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#000000"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:text="Tên điện thoại"
@@ -48,62 +48,41 @@
                 android:layout_marginTop="5dp"
                 android:text="Giá sản phẩm"
                 android:textColor="#FF0000"
-                android:textSize="20sp" />
+                android:textSize="15sp" />
 
-            <LinearLayout
+            <Button
+                android:id="@+id/btn_DatHang"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:backgroundTint="#2196F3"
+                android:text="Thêm vào giỏ hàng" />
 
-                <Spinner
-                    android:id="@+id/spinner_CTSP"
-                    android:layout_width="50dp"
-                    android:layout_height="20dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/spinner"
-                    android:gravity="center"
-                    android:padding="15dp"
-                    android:textAlignment="center" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:text="Mô tả sản phẩm"
+                android:textColor="@color/black"
+                android:textSize="10sp" />
 
-                <Button
-                    android:id="@+id/btn_DatHang"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:backgroundTint="#2196F3"
-                    android:text="Thêm vào giỏ hàng" />
-            </LinearLayout>
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp">
+
+                <TextView
+                    android:id="@+id/txt_MoTaSanPhamCTSP"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp" />
+            </ScrollView>
 
         </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:text="Mô tả sản phẩm"/>
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_margin="5dp"
-            android:layout_height="wrap_content">
-        <TextView
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:id="@+id/txt_MoTaSanPhamCTSP"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        </ScrollView>
-    </LinearLayout>
 </LinearLayout>
