--- a/app/src/main/res/layout/activity_san_pham_actyvity.xml
+++ b/app/src/main/res/layout/activity_san_pham_actyvity.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".Activity.SanPhamActyvity">
+    tools:context=".Activity.ProductActyvity">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolBarSanPham"
         android:title="Sản phẩm"
