--- a/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".Activity.ChiTietSanPham">
+    tools:context=".Activity.ProductDetails">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/tb_ChiTietSanPhamCTSP"
         app:title="Chi tiết sản phẩm"
