--- a/app/src/main/res/layout/activity_gio_hang.xml
+++ b/app/src/main/res/layout/activity_gio_hang.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="10"
-    tools:context=".Activity.GioHang">
+    tools:context=".Activity.Cart">
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:background="#f00000"
@@ -52,7 +52,8 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:gravity="center"
+                android:layout_weight="2"
                 android:text="Tổng tiền:"
                 android:textColor="#FF0000"
                 android:textSize="20sp" />
@@ -60,9 +61,10 @@
             <EditText
                 android:id="@+id/et_GiaTriGH"
                 android:layout_width="0dp"
+                android:gravity="center"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
-                android:layout_weight="3"
+                android:layout_weight="2"
                 android:background="@drawable/custom_editext" />
         </LinearLayout>
     </LinearLayout>
