--- a/app/src/main/res/layout/item_loaisp.xml
+++ b/app/src/main/res/layout/item_loaisp.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_weight="3"
+        android:gravity="center"
         android:layout_height="wrap_content">
         <ImageView
             android:src="@color/purple_500"
