--- a/app/src/main/res/layout/item_san_pham_moi.xml
+++ b/app/src/main/res/layout/item_san_pham_moi.xml
@@ -3,19 +3,25 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@drawable/booder"
+
     android:layout_height="match_parent">
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         app:cardCornerRadius="4dp"
+        android:background="#FFEB3B"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <FrameLayout
             android:layout_width="match_parent"
+
             android:layout_height="match_parent">
 
             <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:translationZ="1dp"
                 android:layout_gravity="top|right"
                 android:src="@drawable/spnew" />
 
@@ -39,10 +45,11 @@
                     android:id="@+id/txtTenSanPham"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="2dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="5dp"
                     android:text="Tên sản phẩm"
                     android:textColor="#101010"
-                    android:textSize="10sp" />
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/txtGiaSanPham"
@@ -50,7 +57,7 @@
                     android:layout_height="wrap_content"
                     android:text="Giá sản phẩm"
                     android:textColor="#f20"
-                    android:textSize="10sp" />
+                    android:textSize="12sp" />
             </LinearLayout>
         </FrameLayout>
     </androidx.cardview.widget.CardView>
