--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -9,7 +9,8 @@
     tools:context=".Activity.Cart">
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
-        android:background="#f00000"
+        android:background="@drawable/color_in_main"
+        app:titleTextColor="#fff"
         android:layout_height="wrap_content"
         android:id="@+id/toolBarGH"
         app:title="Giỏ hàng"/>
@@ -78,12 +79,14 @@
         <Button
             android:id="@+id/btn_TiepTucMuaHang"
             android:layout_width="match_parent"
+            android:backgroundTint="#2196F3"
             android:layout_height="wrap_content"
             android:text="Tiếp tục mua hàng" />
         <Button
             android:id="@+id/btn_MuaHang"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/red"
             android:text="Thanh toán giở hàng" />
     </LinearLayout>
 
