--- a/app/src/main/res/layout/activity_store_information.xml
+++ b/app/src/main/res/layout/activity_store_information.xml
@@ -8,14 +8,15 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:titleTextColor="#ffff"
-        android:background="#64b354"
+        android:background="@drawable/color_in_main"
         app:title="Thông tin liên hệ"
         android:id="@+id/actionBar_TT"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/bgmap">
+        android:background="@drawable/bgmap"
+        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
