--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:title="Trang Chính"
-                android:background="#FFD500">
+                app:titleTextColor="#fff"
+                android:background="@drawable/color_in_main">
             </androidx.appcompat.widget.Toolbar>
             <ViewFlipper
                 android:id="@+id/viewFlipperMHC"
@@ -30,7 +31,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="vertical"
-                android:background="#FFD500"
+                android:background="#FFE500"
                 android:layout_height="match_parent">
                 <TextView
                     android:textSize="15sp"
