--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".Activity.ProductActyvity">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolBarSanPham"
-        android:title="Sản phẩm"
-        android:background="#FFEB3B"
-        android:titleTextColor="@color/black"
+        android:background="@drawable/color_in_main"
+        app:title="ád"
+        android:titleTextColor="#984545"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"/>
     <ListView
