--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -10,12 +10,12 @@
         android:id="@+id/tb_ChiTietSanPhamCTSP"
         app:title="Chi tiết sản phẩm"
         app:titleTextColor="#ffffff"
-        android:background="#00E2FF"
+        android:background="@drawable/color_in_main"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"/>
     <TextView
         android:id="@+id/txt_TenSanPhamCTSP"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#000000"
         android:textSize="15sp"
